--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -608,7 +608,7 @@ div#sidebar {
 	margin-right: -15px;
 	margin-top: -20px;
 	padding-top: 10px;
-	padding-right: 30px;
+	padding-right: 10px;
 	margin-left: 15px;
 	border-left: 1px @border-color solid;
 }
@@ -1343,7 +1343,7 @@ a.ui-corner-all:active {
 	float: right;
 }
 
-.main .group-card {
+.main .group-card, .main .user-card {
 	text-align: center;
 	padding-top: 10px;
 	
@@ -1351,15 +1351,23 @@ a.ui-corner-all:active {
 		width: 96px;
 		height: 96px;
 	}
+	
+	.card-header {
+		text-align: center;
+	}
+	
 	h4 {
 		border: none;
 		margin-bottom: 2px;
 		
 		small {
-			margin-left: 3px;
+			margin-left: 5px;
 		}
 	}
 	
+	.user-card-cv {
+		margin-bottom: 5px;
+	}
 }
 
 #userImg > img {
