fixed group image on group page

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1343,6 +1343,11 @@ a.ui-corner-all:active {
 	float: right;
 }
 
+#groups .group-img {
+	width: 32px;
+	height: 32px;
+}
+
 .main .group-card, .main .user-card {
 	text-align: center;
 	padding-top: 10px;
