save review when rating was selected
fixes #24

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
@@ -12,6 +12,11 @@
 	.action-menu {
 		margin-right: 15px;
 	}
+	
+	div.rating-container {
+		margin-top: -10px;
+		font-size: 1.7em;
+	}
 }
 
 .discussion-thumbnail {
