--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/home.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/home.jspx
@@ -44,6 +44,7 @@
 					);
 				});
 			</script>
+			<script type="text/javascript" src="${resdir}/javascript/favouriteLayoutLoader.js"><!-- keep me --></script>
 		</jsp:attribute>
 		
 		<jsp:attribute name="content">
