--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/help/help.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/help/help.jspx
@@ -6,6 +6,7 @@
 	xmlns:tags="urn:jsptagdir:/WEB-INF/tags/tags"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/layout/parts"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:fontawesome="urn:jsptagdir:/WEB-INF/tags/layout/fontawesome"
 	xmlns:layout="urn:jsptagdir:/WEB-INF/tags/layout">
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
@@ -13,6 +14,11 @@
 		<jsp:attribute name="mainContent">
 			<c:choose>
 				<c:when test="${!command.pageNotFound}">
+					<c:if test="${command.helpPage ne 'Main'}">
+						<a href="${relativeUrlGenerator.getHelpPage('Main', pageContext.response.locale)}">
+							<fontawesome:icon icon="chevron-left" /> Home
+						</a>
+					</c:if>
 					<c:out value="${command.content}" escapeXml="false" />
 				</c:when>
 				<c:otherwise>
