--- a/bibsonomy-webapp/src/main/webapp/resources/css/help.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/help.less
@@ -1,6 +1,8 @@
 #help-main {
+  margin-bottom: 45px;
+  
 	img {
-		width: 100%;
+		max-width: 100%;
 	}
 	
 	h1:first-child {
@@ -12,7 +14,7 @@
 	background-color: #f2f2f2;
 	padding: 15px;
 	border-radius: 15px;
-	margin-right: 45px;
+	margin-left: 45px;
 	
 	> h3:first-child {
 		margin-top: 0px;
