--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1545,3 +1545,14 @@ ul#urlList {
 	white-space: normal !important;
 	font-size: 12px !important;
 }
+
+.all-resources-menu {
+	a, button {
+		color: #a0a0a0;
+	}
+	
+	li.dropdown-header {
+		margin-left: -8px;
+		text-transform: uppercase;
+	}
+}
