fixing long urls breaking community page layout

--- a/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
@@ -134,4 +134,11 @@ span.community-approved {
 	dt, dd {
 		padding-bottom: 3px;
 	}
+	
+	dd a {
+		overflow-wrap: break-word;
+		word-wrap: break-word;
+		word-break: break-word;
+		hyphens: auto;
+	}
 }
