redesign postPublication and postBookmark moved publication import to separate page
fixes #1244, #2636, #1718

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/post/editGoldStandardPublication.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/post/editGoldStandardPublication.jspx
@@ -12,7 +12,7 @@
 	<layout:editGoldStandardPostLayout command="${command}" requPath="${requPath}" resourceType="GoldStandardPublication">
 		
 		<jsp:attribute name="generalInformation">
-			<editpub:required post="${command.post}" autocompletion="$(false)"/>
+			<editpub:required post="${command.post}" />
 		</jsp:attribute>
 
 		<jsp:attribute name="detailedInformation">
