--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/csl-style.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/csl-style.jspx
@@ -17,5 +17,5 @@
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
 	xmlns:x="http://java.sun.com/jsp/jstl/xml"> 
 	<jsp:directive.page contentType="text/text; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true"/>
-	${CSLFilesManager.json}
+	${command.xml}
 </jsp:root>
