readded entry type description

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -840,6 +840,9 @@ span.web					{background-position:-2px -1106px;width:61px;height:37px; margin-to
 	font-size: 10px !important;
 }
 
+.popover{
+	max-width: 500px; /* Max Width of the popover (depending on the container!) */
+}
 
 /**
  * PUBLICATION PAGE
