working on document view on publication details page

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -966,20 +966,6 @@ a.edit-added-files {
 	margin-right: 10px;
 }
 
-a.doc-magnify {
-	color: white;
-	padding: 5px;
-	font-size: 25px;
-	position: absolute;
-	right: 25px;
-	bottom: 95px;
-	border-radius: 25px;
-	width: 50px;
-	height: 48px;
-	background-color: rgba(0, 0, 0, 0.5);
-	text-align: center;
-}
-
 .small-box {
 	width: 616px;
 	margin: auto;
@@ -1544,6 +1530,10 @@ ul#urlList {
 	top: 0;
 	left: 0;
 	overflow: hidden;
+}
+
+.fa-6x {
+	font-size: 10em;
 }
 
 .fa-space-5 {
