removed useless hasDidYouKnowMessage method

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/user.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/user.jspx
@@ -60,7 +60,7 @@
 			<!-- Did you know? -->
 			<c:if test="${	command.context.userLoggedIn and 
 							command.context.loginUser.name eq command.requestedUser and 
-							mtl:hasDidYouKnowMessage(command) and
+							not empty command.didYouKnowMessage and
 							command.context.loginUser.settings.layoutSettings.simpleInterface}">
 				<bs:didYouKnow command="${command}"/>
 			</c:if>
