--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/export.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/export.jspx
@@ -29,6 +29,9 @@
 
 
 		<jsp:attribute name="headerExt">
+			<script type="text/javascript" src="${resdir}/select2/js/select2/core.js"><!-- keep me --></script>			
+			<link rel="stylesheet" type="text/css" href="${resdir}/select2/scss/core.scss"/>
+			
 			<!-- start and setup the logic behind the export size radio buttons (setupPostExportSize in functions.js)-->
 			<script type="text/javascript">
 				<![CDATA[
