--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -28,6 +28,8 @@
 /** rating bootstrap lib */
 @import (inline) "../star-rating/star-rating.css";
 
+@import (inline) "../select2/css/select2.css";
+
 /** Batchedit page info Box on mouseover*/
 @import "BatchEdit.less";
 
