--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/errors/404.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/errors/404.jspx
@@ -5,6 +5,7 @@
 	xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
 	xmlns:tags="urn:jsptagdir:/WEB-INF/tags/tags"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/layout/parts"
+	xmlns:errors="urn:jsptagdir:/WEB-INF/tags/errors"
 	xmlns:layout="urn:jsptagdir:/WEB-INF/tags/layout">
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
@@ -17,7 +18,9 @@
 		<jsp:attribute name="content">
 			<div class="text-center">
 				<h1><fmt:message key="error.404.header" /></h1>
-				<p class="lead"><fmt:message key="error.404" /></p>
+				<p class="lead"><errors:global dismissible="false" />
+				
+				<fmt:message key="error.404" /></p>
 				
 				<img src="/resources/image/404.jpg" />
 			</div>
