reenabled renaming and uploading file

--- a/bibsonomy-webapp/src/main/webapp/resources/css/publication-details.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/publication-details.less
@@ -28,6 +28,14 @@
 	.add-document {
 		margin-top: 10px;
 	}
+	
+	.document-name {
+		word-wrap: break-word;
+	}
+}
+
+form.document-upload {
+	margin-top: 5px;
 }
 
 #add-document {
@@ -35,6 +43,19 @@
 	a {
 		color: black;
 		font-weight: normal;
+	}
+	
+	.fa-6x {
+		-webkit-text-stroke: 12px white;
+	}
+}
+
+#renameModal {
+	top: 25%;
+	
+	.modal-progress {
+		margin-right: 25px;
+		display: none;
 	}
 }
 
