fixed oauth jsp

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/oauth.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/admin/oauth.jspx
@@ -22,9 +22,7 @@
 			pageTitle="${adminPageTitle} | OAuth"
 			requPath="${requPath}"
 			headerMessageKey="gettingStarted.headline"
-			command="${command}"
-			loginUser="${command.context.loggedinUser}"
-			noSidebar="${true}">
+			loginUser="${command.context.loginUser}">
 		<jsp:attribute name="breadcrumbs">
 			<nav:breadcrumbs>
 				<jsp:attribute name="crumbs">
