added function to copy to local clipboard
modal view for export format using the action menu in a resource list

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1577,6 +1577,10 @@ p.separator {
 	margin: 25px 0 35px;
 }
 
+#copyToLocalClipboard {
+	margin-top: 10px;
+}
+
 .separator span {
 	background-color: #fff;
 	padding-left: 5px;
