disabled folkrank order on global tag pages with sys tags only
#2704

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/tag.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/tag.jspx
@@ -29,14 +29,16 @@
 		</jsp:attribute>
 		
 		<jsp:attribute name="additionalSorting">
-			<c:choose>
-				<c:when test="${command.sortPage eq 'folkrank'}">
-					<li><span class="italic"><fontawesome:icon icon="sort-numeric-asc " spaceAfter="5" /><fmt:message key="sort.folkrank"/></span></li>
-				</c:when>
-				<c:otherwise>
-					<li><a href="${mtl:setParam(requPathAndQuery, 'sortPage', 'folkrank')}"><fontawesome:icon icon="sort-numeric-asc " spaceAfter="5" /><fmt:message key="sort.folkrank"/></a></li>
-				</c:otherwise>
-			</c:choose>
+			<c:if test="${command.numberOfNormalTags > 0}">
+				<c:choose>
+					<c:when test="${command.sortPage eq 'folkrank'}">
+						<li><span class="italic"><fontawesome:icon icon="sort-numeric-asc " spaceAfter="5" /><fmt:message key="sort.folkrank"/></span></li>
+					</c:when>
+					<c:otherwise>
+						<li><a href="${mtl:setParam(requPathAndQuery, 'sortPage', 'folkrank')}"><fontawesome:icon icon="sort-numeric-asc " spaceAfter="5" /><fmt:message key="sort.folkrank"/></a></li>
+					</c:otherwise>
+				</c:choose>
+			</c:if>
 		</jsp:attribute>
 		
 		<jsp:attribute name="heading">
